# rockpaperscissors

./: .gitignore  CMakeLists.txt  README.md
engine/: ANSI_colors.h  ai.c  ai.h  engine.c  engine.h
src/: main.c  utest.c  utest_engine.c  utest_engine.h
